--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@strapi/plugin-users-permissions": "5.18.1",
+    "@strapi/provider-upload-cloudinary": "^5.33.4",
     "@strapi/provider-upload-local": "5.18.1",
     "@strapi/strapi": "5.18.1",
     "pg": "8.8.0",
